# clitic

./: .gitignore  .python-version  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: .session  api.md  functional.md  requirements.md  ui-ux.md  ux-scroll-tests.md
docs/: conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/api/: app.md  completion.md  exceptions.md  plugins.md  widgets.md
docs/development/: changelog.md  contributing.md  test-conftest-review.md  test-coverage-review.md
reporting/base-app-class/: summary.md
reporting/base-styles/: summary.md
reporting/clitic-initial-analysis/: consensus.md
reporting/conversation-auto-scroll/: development-summary.md  summary.md
reporting/conversation-block-model/: consensus.md  summary.md
reporting/conversation-block-navigation/: functional-review.md  summary.md  ux-ui-implementation-review.md  ux-ui-review.md
reporting/conversation-block-pruning/: development-summary.md  functional-review.md  ux-ui-review.md
reporting/conversation-session-persistence/: functional-review.md  summary.md  ux-ui-review.md
reporting/conversation-virtual-rendering/: development-summary.md  functional-review.md  summary.md
reporting/exception-hierarchy/: summary.md
reporting/fix-quickstart-example/: summary.md
reporting/inputbar-autogrow/: summary.md
reporting/inputbar-cursor/: functional-review.md  summary.md
reporting/plugin-base-classes/: summary.md
reporting/setup-ci/: summary.md
reporting/setup-py.typed/: summary.md
reporting/test-app-plugin-integration/: functional-review.md  summary.md
reporting/test-conftest-py/: summary.md
reporting/test-inputbar-newline/: functional-review.md  summary.md
src/clitic/: __init__.py  __main__.py  exceptions.py
src/clitic/completion/: __init__.py  base.py
src/clitic/core/: __init__.py  app.py
src/clitic/history/: __init__.py
src/clitic/plugins/: __init__.py  base.py
src/clitic/session/: __init__.py  manager.py
src/clitic/styles/: __init__.py  base.tcss
src/clitic/themes/: __init__.py
src/clitic/utils/: __init__.py
src/clitic/widgets/: __init__.py  conversation.py  input_bar.py
tests/: __init__.py  conftest.py  test_app.py  test_app_plugin_integration.py  test_completion_base.py  test_conversation.py  test_conversation_navigation.py  test_conversation_pruning.py  test_conversation_scroll_resize.py  test_exceptions.py  test_input_bar.py  test_package.py  test_plugin_base.py  test_session_concurrency.py  test_session_manager.py
