[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clitic"
version = "0.1.0"
description = "A Python package for building rich, interactive CLI applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Christophe VG", email = "contact@christophe.vg"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
  "Typing :: Typed",
]
keywords = ["cli", "tui", "terminal", "textual", "rich"]

dependencies = [
  "textual>=0.50.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
  "tox>=4.0.0",
  "coveralls>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/christophevg/clitic"
Documentation = "https://clitic.readthedocs.io/"
Repository = "https://github.com/christophevg/clitic"
Issues = "https://github.com/christophevg/clitic/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clitic = ["py.typed", "themes/*.tcss", "styles/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=clitic --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["clitic"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
  ["pytest", "-v", "--cov=clitic", "--cov-report=term-missing"],
]

[tool.tox.env.py310]
base_python = ["python3.10"]

[tool.tox.env.py311]
base_python = ["python3.11"]

[tool.tox.env.py312]
base_python = ["python3.12"]